precompiles/macro/tests/compile-fail/precompile/codec/no-output.stderr
error: A precompile method must have a return type of `EvmResult<_>` (exposed by `precompile_utils`)
  --> tests/compile-fail/precompile/codec/no-output.rs:26:2
   |
26 |     fn foo(test: &mut impl PrecompileHandle) {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
